force-app/main/default/objects/Opportunity/fields/Changed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Changed_Reason__c</fullName>
    <label>Changed Reason</label>
    <type>TextArea</type>
</CustomField>