force-app/main/default/objects/Opportunity/validationRules/Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(StageName,&apos;Closed Lost&apos;) &amp;&amp; ISBLANK( Changed_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Changed_Reason__c</errorDisplayField>
    <errorMessage>Enter Reason For Changing Stage name to Closed Lost</errorMessage>
</ValidationRule>